пропихнул в роутинг organizationId

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sample App</title>
     <link rel="stylesheet" href="/dist/index.css">
+    <script>
+        window.apiURL = "http://mp04lr1z.dev.kontur:11002";
+    </script>
 </head>
 <body>
 <div id="root"></div>
